objects/Request_for_Quotation__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Procurement_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Procurement_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procurement Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Request for Quotations</relationshipLabel>
        <relationshipName>Request_for_Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Request for Quotations</relationshipLabel>
        <relationshipName>Request_for_Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Requisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Requisition</label>
        <referenceTo>Purchase_Requisition__c</referenceTo>
        <relationshipLabel>Request for Quotations</relationshipLabel>
        <relationshipName>Request_for_Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requisition_Details__c</fullName>
        <label>Requisition Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response_Due_Date__c</fullName>
        <label>Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request for Quotation</label>
    <listViews>
        <fullName>All_RFQs</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Purchase_Requisition__c</columns>
        <columns>Project_Summary__c</columns>
        <columns>Procurement_Contact__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All RFQs</label>
    </listViews>
    <listViews>
        <fullName>Open_RFQs</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>Open RFQs</label>
    </listViews>
    <nameField>
        <displayFormat>RFQ-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request for Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>